# VieNeu-TTS

./: .env.example  .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  gradio_app.py  main.py  pyproject.toml  pyproject.toml.cpu  vieneutts.py
.github/: FUNDING.yml
docker/: Dockerfile.cpu  Dockerfile.gpu
examples/: infer_long_text.py
finetune/: README.md  finetune_VieNeu-TTS.ipynb  train.py
finetune/data_scripts/: encode_data.py  filter_data.py  get_hf_sample.py
utils/: core_utils.py  normalize_text.py  phoneme_dict.json  phonemize_text.py
vieneu_tts/: vieneu_tts.py
web_ui/: package-lock.json  package.json
web_ui/src/: App.tsx  index.css
web_ui/src/components/: AudioVisualizer.tsx
web_ui/src/hooks/: useAudioPlayer.ts  useWebSocket.ts
web_ui/src/types/: index.ts
